@@ -1,3 +1,8 @@
+2006-08-16  Guillaume Smet <guillaume-pg@smet.org>
+
+	* [vacuum] fixed elapsed time calculation. The problem
+	was due to inconsistency in PostgreSQL code.
+
 2006-08-11  Guillaume Smet <guillaume.smet@openwide.fr>
 
 	* fixed [#1000703] reported by Jérôme Benois
